fix(form.scss): 🐛 remove margin-top from form and reset textarea height to fix form content overflow

--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -5,7 +5,6 @@ form {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 75px;
 }
 
 form label {
@@ -29,6 +28,3 @@ form input, form textarea {
     font-size: 36px;
 }
 
-form textarea {
-    height: 170px;
-}
